z-index search navbar repaired

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -494,6 +494,10 @@ View: Search results
   }
 }
 
+.zindex-lower {
+  z-index: 199;
+}
+
 .chosen .btn, .btn.chosen {
 	background-color: rgba(0, 0, 0, 0.133);
 }
